# fable

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  LICENSE.txt  README.2.fbld  README.adoc  README.fbld  README.md  README.txt  Release.fbld  TODO.txt  bathylus.txt  build.fblc.tcl  build.fbld.tcl  build.fble.tcl  build.ninja  build.ninja.in  build.ninja.tcl  build.tcl  buildstamp  calvisus.txt  config.tcl.in  configure  deps.tcl  error.cc  error.h  fable.txt  fbld.tcl  fbld.test.tcl  fbld.usage.tcl  makefile  migrate.tcl  tests.txt  todo-0.1.txt  todo-0.2.txt  todo-0.3.txt  todo-0.4.txt  todo-0.5.txt  (+3 more)
fble/src/: CMakeLists.txt  alloc.c  arg-parse.c  code.c  code.h  compile.c  execute.c  execute.h  expr.c  expr.h  generate_aarch64.c  generate_c.c  heap.c  heap.h  instr.c  instr.h  interpret.c  interpret.h  isa.c  isa.h  kind.c  link.c  load.c  loc.c  main.c  module-path.c  name.c  parse.y  profile.c  stack-alloc.c  stack-alloc.h  string.c  syntax.c  syntax.h  tc.c  tc.h  type.c  type.h  typecheck.c  typecheck.h  (+3 more)
prgms/: AllTests.fbld  AllTests.fble  AllTests.mdefn  AllTests.mtype  AllTests.wnt  AllTestsI.fbld  AllTestsM.fbld  App.fble  BTMap.fble  Bit8I.fbld  Bit8M.fbld  BitNI.fbld  Bits.fbld  Bits.fble  Bits_.fble  Bool.fbld  Bool.fble  Bool.mdecl  Bool.mdefn  Bool.mtype  BoolI.fbld  BoolM.fbld  Bool_.fble  CMakeLists.txt  Char.fble  Char_.fble  Data.fble  DataFlow.fble  DataMap.fble  DataMap_Tests.fble  Data_Eq.fble  Digits.fble  Draw.fbld  Draw.fble  Draw.mdefn  Draw.mtype  DrawI.fbld  DrawM.fbld  Drawing.fble  Eq.fble  (+175 more)
prgms/App/: Benchmark.fble
prgms/BTMap/: Eq.fble  Show.fble  Tests.fble
prgms/BenchmarkGame/: Bench.fble  BinaryTrees.fble  PiDigits.fble  Test.fble  Tests.fble
prgms/Bits/: Bit.fbld  Bit1.fbld  Bit1.fble  Bit16.fbld  Bit1M.fbld  Bit2.fbld  Bit2XN.fbld  Bit2XN.fble  Bit32.fbld  Bit32I.fbld  Bit32M.fbld  Bit4.fbld  Bit64.fbld  Bit64I.fbld  Bit64M.fbld  Bit8.fbld  BitI.fbld  BitM.fbld  (+3 more)
tools/: CMakeLists.txt  extract-spec-test.tcl  fble-compile.c  fble-debug-test.exp  fble-deps.c  fble-disassemble.c  fble-mem-test.c  fble-native.c  fble-profile-test.c  fble-profiles-test.c  fble-test.c  run-spec-test.tcl  spec-test.tcl  tests.tcl
(+4833 files in other folders)
